--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     </head>
 
     <body>
-        <h1>01 Párrafo</h1>    
+        <h1>01 Título</h1>
+
+        <p>01 Párrafo</p>
     </body>
 
 </html>
