04 Probando a sincronizar Git con VSC

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <body>
         <h1>01 Título</h1>
 
-        <p>01 Párrafo</p>
+        <p>01 Párrafo de Git a VSC</p>
+
+
+        <p>01 Párrafo de VSC a Git</p>
     </body>
 
 </html>
