--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>2º Proyecto Git con VSC</title>
+        <link rel="stylesheet" href="estlos.css" type="text/css">
     </head>
 
     <body>
